# Carrot-Mapper

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .zenodo.json  CONTRIBUTING.md  Dockerfile  Dockerfile.deploy  LICENSE  Pseudocode_CO-CONNECT_Pipelines.py  README.md  changelog.md  docker-compose.db.yml  docker-compose.yml  entrypoint.sh  package-lock.json  pseudoanon.py  pyproject.toml  requirements.txt  salt_gen.py  sample-env.txt  sample-local.settings.json
.github/: labeler.yml  pull_request_template.md
NLPQueue/: __init__.py  function.json  readme.md
ProcessQueue/: __init__.py  blob_parser.py  function.json  helpers.py  readme.md
RulesQueue/: __init__.py  function.json
Xls_to_CSV/: Xls_to_CSV.sln
api/: requirements.txt
app/: Dockerfile  Dockerfile.deploy  entrypoint.sh
app/api/: gunicorn.conf.py  manage.py  pyproject.toml
app/api/api/: apps.py  deprecated_router.py  deprecated_serializers.py  deprecated_urls.py  deprecated_views.py  filters.py  mixins.py  paginations.py  react.py  router.py  routers.py  serializers.py  settings.py  signals.py  urls.py  views.py
app/api/authn/: urls.py  views.py
app/api/config/: react.py  settings.py  urls.py  wsgi.py
app/api/datasets/: serializers.py  urls.py  views.py
app/api/mapping/: admin.py  forms.py  models.py  permissions.py  serializers.py  services.py  services_nlp.py  services_rules.py  urls.py  views.py
app/api/mapping/data/: ClassifedRoledata.csv.csv  value_frequency_test_data.csv
app/api/mapping/management/commands/: add_admins_to_datasets.py  add_datasets_to_partner.py  generate_rules_json.py  refresh_mapping_rules.py  unorphan_scanreports.py
app/api/mapping/services/: nlp.py  rules.py  services_nlp.py
app/api/mapping/templates/mapping/: home.html  scanreportassertion_list.html
app/api/mapping/test/: conftest.py  test_permissions.py  test_serializers.py  test_services_rules.py  test_views.py
app/api/projects/: serializers.py  urls.py  views.py
app/api/proxy/: apps.py  urls.py
app/api/static/style/: custom.css
app/api/templates/: base.html
app/api/templates/registration/: logged_out.html  login.html  password_change_done.html  password_change_form.html  signup.html
app/api/test/: conftest.py  settings.py  test_permissions.py  test_serializers.py  test_services_rules.py  test_views.py
app/shared/: pyproject.toml
app/shared/shared/: models.py
app/shared/shared/data/: apps.py  models.py
app/shared/shared/data/models/: __init__.py
app/shared/shared/data/omop/: concept.py  concept_ancestor.py  concept_class.py  concept_relationship.py  concept_synonym.py  domain.py  drug_strength.py  vocabulary.py
app/shared/shared/files/: apps.py  models.py  serializers.py  service.py  views.py
app/shared/shared/files/fixtures/: filetypes.json
app/shared/shared/files/migrations/: 0001_initial.py
app/shared/shared/jobs/: apps.py  models.py  serializers.py  views.py
app/shared/shared/jobs/migrations/: 0001_initial.py  0002_remove_job_scan_report_id_and_more.py
app/shared/shared/mapping/: admin.py  apps.py  forms.py  models.py  permissions.py  views.py
app/shared/shared/mapping/fixtures/: mapping.json  mapping_status.json  upload_status.json
app/shared/shared/mapping/management/commands/: add_admins_to_datasets.py  add_datasets_to_partner.py  generate_rules_json.py  refresh_mapping_rules.py  unorphan_scanreports.py
app/shared/shared/mapping/migrations/: 0001_initial.py  0002_auto_20220428_1110.py  0003_handmade_20220428_1503.py  0004_auto_20241009_1038.py  0004_mappingstatus_uploadstatus.py  0004_mappingstatus_uploadstatus_scanreport_mapping_status_and_more.py  0004_remove_scanreport_status_scanreport_mapping_status_and_more.py  0004_scanreporttable_death_table.py  0005_alter_scanreporttable_death_table.py  0005_auto_20241014_1552.py  0005_auto_20241015_0900.py  0006_jobstage_scanreportjob_stagestatus.py  0006_scanreporttable_death_table.py  0007_activitystatus_rulesactivity_and_more.py
app/shared/shared/mapping/templates/mapping/: admin_dataset_form.html  admin_scanreport_form.html  dataset_list.html  datasets_content.html  error_404.html  home.html  mappingrulesscanreport_list.html  scanreport_list.html  scanreportassertion_form.html  scanreportassertion_list.html  scanreportconcept_list.html  scanreportfield_form.html  scanreportfield_list.html  scanreporttable_list.html  scanreportvalue_list.html  upload_scan_report.html
app/shared/shared/services/: __init__.py  azurequeue.py  rules.py  rules_export.py
app/shared/test/services/: settings.py  test_azurequeue.py  test_rules.py
app/workers/: Dockerfile  host.json  pyproject.toml  requirements.txt
app/workers/ConceptTable/: __init__.py  function.json  original.py  reuse.py
app/workers/CreateConcepts/: __init__.py  function.json  models.py  reuse.py
app/workers/DatabaseTest/: __init__.py  function.json
app/workers/MappingRules/: __init__.py  function.json
app/workers/NLPQueue/: function.json
app/workers/ProcessQueue/: __init__.py  blob_parser.py  function.json  helpers.py
app/workers/RulesActivity/: __init__.py
app/workers/RulesConceptsActivity/: __init__.py  function.json  reuse.py
app/workers/RulesFileQueue/: __init__.py  function.json
app/workers/RulesGenerationActivity/: __init__.py  function.json
app/workers/RulesOrchestrator/: __init__.py  function.json
app/workers/RulesQueue/: __init__.py  function.json
app/workers/RulesTrigger/: __init__.py  function.json
app/workers/UploadQueue/: __init__.py  function.json
app/workers/WorkerStatus/: __init__.py  function.json
app/workers/mapping/: __init__.py
app/workers/shared_code/: api.py  blob_parser.py  db.py  django_settings.py  helpers.py  logger.py  models.py  omop_helpers.py
app/workers/test/: test_pass.py
app/workers/test/CreateConcepts/: test_create_concepts.py  test_init.py
app/workers/test/RulesConceptsActivity/: test_create_concepts.py
app/workers/test/UploadQueue/: test_init__upload.py  test_upload.py
app/workers/test/shared_code/: test_blob_parser.py  test_helpers.py
cctools/: build_data_dictionary.py  (+2 more)
(+589 files in other folders)
