[tool.poetry]
name = "carrot-mapper"
version = "0.1.0"
description = ""
authors = ["John Smith <john@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
coverage = "^7.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.1"
isort = "^5.13.2"
black = "^24.2.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
