[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Carrot shared library"
authors = ["Sam Cox <sam.cox@nottingham.ac.uk>", "Philip Quinlan <philip.quinlan@nottingham.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
psycopg2-binary = "^2.9.9"
azure-storage-queue = "^12.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
