[tool.poetry]
name = "workers"
version = "0.1.0"
description = "Workers for CaRROT Mapper"
authors = ["Sam Cox <sam.cox@nottingham.ac.uk>", "Philip Quinlan <philip.quinlan@nottingham.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
azure-common = "^1.1.28"
azure-functions = "1.20"
azure-storage-blob = "12.20.0"
requests = "2.32.3"
openpyxl = "3.1.3"
Resource = "^0.2.1"
httpx = "0.27"
shared = {path = "../shared"}
python-dotenv = "^1.0.1"
azure-functions-durable = "^1.2.9"

[tool.poetry.group.dev.dependencies]
memory-profiler = "^0.61.0"
psycopg2 = "^2.9.9"
mypy = "^1.10.0"
django-stubs = "^5.0.0"
types-openpyxl = "^3.1.0.20240428"
types-requests = "^2.31.0.20240406"
shared = {path = "../shared", develop = true}


[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["."]
